optimized with avif

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#work">Work</a></li>
-          <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
+          <li><a class="nav-link scrollto " href="#resume">Resume</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -151,7 +151,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/profile-img.avif" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -367,8 +367,76 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <section id="resume" class="resume">
+      <div class="container" data-aos="fade-up">
+
+        <div class="title-box text-center">
+          <h3 class="title-a">RESUME</h3>
+          <div class="line-mf"></div>
+
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <h3 class="resume-title">Sumary</h3>
+            <div class="resume-item pb-0">
+              <h4>Sarath Kumar</h4>
+              <p><em>Self-taught,Innovative and deadline-driven Web Developer and Designer who has brushed his skills working atleast 13 hours a day designing and developing user-centered websites from initial concept to final, polished deliverable.</em></p>
+              <ul>
+                <li>Kochi,Kerala, IN</li>
+                <li>+91 7907 481 991</li>
+                <li>worksarath95@gmail.com</li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>B.Com Computer Application</h4>
+              <h5>2013 - 2016</h5>
+              <p><em>William Carey University,Shillong</em></p>
+              <p>Completed Bachelor of Commerce in Computer Application securing first class.</p>
+            </div>
+            <div class="resume-item">
+              <h4>Nava Nirman Public School</h4>
+              <h5>1999 - 2013</h5>
+              <p><em>Kochi,Kerala</em></p>
+              <p>Completed schooling from Nava Nirman School securing good scores in 10th grade as well as 12th grade.</p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Customer Support Executive</h4>
+              <h5>Dec 2021 - March 2021</h5>
+              <h6>Opal Contracts</h6>
+              <p><em>Aluva,Ernakulam</em></p>
+              <ul>
+                <li>Lead the sales team to acquire more customers</li>
+                <li>Acted as the link between my company and wholesalers,architects and engineers.</li>
+                <li>Oversee the efficient use of production project budgets ranging from 20000 - 2500000</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Customer Support Executive</h4>
+              <h5>March 2020 - December 2020</h5>
+              <h6>NetTrans InfoTech</h6>
+              <p><em>CSEZ,Kakkanad,Kochi</em></p>
+              <ul>
+                <li>Worked as Customer Support Executive and my prime duties included Sales and support.</li>
+                <li>Managed multiple customers and tasks at a given time while under pressure</li>
+                <li>Been a loyal and go to person for customers</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Resume Section -->
+
+
+
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.avif)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -412,7 +480,7 @@
                         If you had a good time and wish to connect with me,here are the links.
                       </p>
                       <ul class="list-ico">
-                        <li><a href=""><span class="bi bi-geo-alt"></span>Kochi,Kerala,India</a></li>
+                        <li><a href="https://www.google.com/maps/@10.0048995,76.3288548,16z"><span class="bi bi-geo-alt"></span>Kochi,Kerala,India</a></li>
                         <li><a href="tel: +91 7907 481 991"><span class="bi bi-phone"></span>+91 7907 481 991</a></li>
                         <li><span class="bi bi-envelope"></span> <a href="mailto:worksarath95@gmail.com">worksarath95@gmail.com</a></li>
                       </ul>
