updated new hero bg

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/How-to-Setup-ReactJS-with-Django.avif)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
