--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
     function redirectForm(){
       if(validate() == true){
         /*alert("Hey ping!");*/
-        swal("Thank You!", "I will get back to you at the earliest.", "success");
+        swal({
+              title: "Thank you! I will get back to you at the earliest",
+              icon: "success",
+            })
+            .then((okayclick) => {
+              if (okayclick) {
+                document.getElementById("myForm").reset();
+              }
+});
         
       
       }
